# cudaBenchmark

./: .clang-format  .gitignore  README.md
Benchmarks/Stream/: CMakeLists.txt  bmscript.sh  parseplotBW.py
Benchmarks/Stream/cmake/: boost.cmake  cccl.cmake
Benchmarks/Stream/header/: CMakeLists.txt  StreamGPU.hpp  kernels.hpp
Benchmarks/Stream/header/include/: kernels.hpp
Benchmarks/Stream/header/src/: kernels.cpp
Benchmarks/Stream/implementation/: CMakeLists.txt  main.cpp  main.cu
Benchmarks/Stream/utilities/: parseCLA.hpp
Benchmarks/cudaStream/: CMakeLists.txt  bmscript.sh  compile.sh  parseplotBW.py
Benchmarks/cudaStream/cmake/: CPM.cmake
Benchmarks/reduce/: CMakeLists.txt  main.cu
Benchmarks/simpleStreamBenchmark/: CMakeLists.txt
Benchmarks/simpleStreamBenchmark/cmake/: NVTX.cmake  cccl.cmake
Benchmarks/simpleStreamBenchmark/header/: StreamGPU.hpp
Benchmarks/simpleStreamBenchmark/implementation/: main.cu
Benchmarks/simpleStreamBenchmark/utilities/: CMakeLists.txt  parseCLA.hpp
Benchmarks/single_gpu_stream/: BWplotting.py  CMakeLists.txt  benchmark.sh  main.cc  main.cpp  main.cu
Benchmarks/single_gpu_stream/RESULTS/: 2503089_benchmark  2506974_benchmark  2506982_benchmark  2507154_benchmark
Benchmarks/single_gpu_stream/cmake/: cccl.cmake
Benchmarks/single_gpu_stream/headers/: kernels.cuh
Benchmarks/transpose/: CMakeLists.txt  main.cu
Benchmarks/transpose/headers/: kernels.cuh
Common/: CMakeLists.txt  cuda_error_handler.cuh  cuda_errror_handler.cuh  cuda_helper.cuh  cuda_timer.cuh  event_helper.cuh  stream_helper.cuh
